refactor: update block action methods in subprocesso facade to accept subprocess IDs directly.